[project]
name = "smugmug-bulk-downloader"
version = "0.1.0"
description = "SmugMug backup and bulk downloader - export all photos, metadata, and galleries for migration or local backup"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = [
    "smugmug",
    "smugmug-downloader",
    "smugmug-backup",
    "photo-backup",
    "export-tool",
    "migration",
    "bulk-download",
    "metadata",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: System :: Archiving :: Backup",
]
dependencies = [
    "requests>=2.32.5",
    "requests-oauthlib>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/smugmug-bulk-downloader"
Repository = "https://github.com/YOUR_USERNAME/smugmug-bulk-downloader"
Issues = "https://github.com/YOUR_USERNAME/smugmug-bulk-downloader/issues"
